{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 232,
  "lineage": "f04ca319-b686-3466-71d9-eb0d101c0cd8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "api_afarma_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarma-load-balancer/911489bd2f69f5de",
            "arn_suffix": "app/api-afarma-load-balancer/911489bd2f69f5de",
            "dns_name": "api-afarma-load-balancer-105394866.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarma-load-balancer/911489bd2f69f5de",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-afarma-load-balancer",
            "security_groups": [
              "sg-043851256becbf8b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d600664c0078c9fc"
              },
              {
                "subnet_id": "subnet-0da08eeed1faff164"
              }
            ],
            "subnets": [
              "subnet-0d600664c0078c9fc",
              "subnet-0da08eeed1faff164"
            ],
            "vpc_id": "vpc-09ec941037e03a0b2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "api_afarmapopular_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarmapopular-load-balancer/6c68c9904ad3a949",
            "arn_suffix": "app/api-afarmapopular-load-balancer/6c68c9904ad3a949",
            "dns_name": "api-afarmapopular-load-balancer-1421385624.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarmapopular-load-balancer/6c68c9904ad3a949",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-afarmapopular-load-balancer",
            "security_groups": [
              "sg-043851256becbf8b8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d600664c0078c9fc"
              },
              {
                "subnet_id": "subnet-0da08eeed1faff164"
              }
            ],
            "subnets": [
              "subnet-0d600664c0078c9fc",
              "subnet-0da08eeed1faff164"
            ],
            "vpc_id": "vpc-09ec941037e03a0b2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "api_afarma_alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarma-load-balancer/911489bd2f69f5de/d124eeb181b7807a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarma-load-balancer/911489bd2f69f5de/d124eeb181b7807a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarma-load-balancer/911489bd2f69f5de",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.api_afarma_alb",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "api_afarmapopular_alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarmapopular-load-balancer/6c68c9904ad3a949/a686e8ccfcac4a58",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarmapopular-load-balancer/6c68c9904ad3a949/a686e8ccfcac4a58",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarmapopular-load-balancer/6c68c9904ad3a949",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.api_afarmapopular_alb",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api_afarma_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarma-target-group/0f2de34674642074",
            "arn_suffix": "targetgroup/api-afarma-target-group/0f2de34674642074",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarma-target-group/0f2de34674642074",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "api-afarma-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api_afarmapopular_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarmapopular-target-group/fd68903e148b20fc",
            "arn_suffix": "targetgroup/api-afarmapopular-target-group/fd68903e148b20fc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarmapopular-target-group/fd68903e148b20fc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "api-afarmapopular-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "api_afarma_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarma-target-group/0f2de34674642074-20211003023430282200000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarma-target-group/0f2de34674642074",
            "target_id": "i-07dea63239f13747f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_alb_target_group.api_afarma_alb_tg",
            "aws_instance.server-afarma",
            "aws_key_pair.deployer-aws",
            "aws_security_group.wildfly",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "api_afarmapopular_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarmapopular-target-group/fd68903e148b20fc-20211003023456083700000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarmapopular-target-group/fd68903e148b20fc",
            "target_id": "i-0cfd858dabaf8722e"
          },
          "dependencies": [
            "aws_instance.server-afarmapopular",
            "aws_key_pair.deployer-aws",
            "aws_security_group.wildfly",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "aws_alb_target_group.api_afarmapopular_alb_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d3c53cadaaaaea4d",
            "domain": "vpc",
            "id": "eipalloc-079e8af2433692d07",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c5f99df70743a417",
            "private_dns": "ip-192-168-2-225.ec2.internal",
            "private_ip": "192.168.2.225",
            "public_dns": "ec2-18-215-111-29.compute-1.amazonaws.com",
            "public_ip": "18.215.111.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b1622677ad770599",
            "domain": "vpc",
            "id": "eipalloc-01dc8460c5ac0ba0c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0641dcfbc4d47c7a9",
            "private_dns": "ip-192-168-3-116.ec2.internal",
            "private_ip": "192.168.3.116",
            "public_dns": "ec2-44-197-14-6.compute-1.amazonaws.com",
            "public_ip": "44.197.14.6",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-afarma",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0138a1d8b44e67c59",
            "arn": "arn:aws:ec2:us-east-1:768145662839:instance/i-07dea63239f13747f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07dea63239f13747f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05a11dd3c4c2a3c25",
            "private_dns": "ip-192-168-2-213.ec2.internal",
            "private_ip": "192.168.2.213",
            "public_dns": "ec2-52-91-70-66.compute-1.amazonaws.com",
            "public_ip": "52.91.70.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06985d3b0cfc362e9",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da08eeed1faff164",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063ab20a69b260313"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer-aws",
            "aws_security_group.wildfly",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-afarmapopular",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0138a1d8b44e67c59",
            "arn": "arn:aws:ec2:us-east-1:768145662839:instance/i-0cfd858dabaf8722e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfd858dabaf8722e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041fc330dab8490f6",
            "private_dns": "ip-192-168-2-138.ec2.internal",
            "private_ip": "192.168.2.138",
            "public_dns": "ec2-3-86-81-115.compute-1.amazonaws.com",
            "public_ip": "3.86.81.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1413776a3a4b60c",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da08eeed1faff164",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-063ab20a69b260313"
            ]
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "aws_key_pair.deployer-aws",
            "aws_security_group.wildfly"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:internet-gateway/igw-061d20419e8f84f14",
            "id": "igw-061d20419e8f84f14",
            "owner_id": "768145662839",
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_afarma_lb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarma-load-balancer/911489bd2f69f5de/65cbefd0b735d064",
            "certificate_arn": "arn:aws:acm:us-east-1:768145662839:certificate/067b33fa-3474-4e32-8c45-cd55cda67434",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarma-target-group/0f2de34674642074",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarma-load-balancer/911489bd2f69f5de/65cbefd0b735d064",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarma-load-balancer/911489bd2f69f5de",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "aws_acm_certificate.afarmaappbrcert",
            "aws_alb.api_afarma_alb",
            "aws_alb_target_group.api_afarma_alb_tg",
            "aws_route53_zone.afarmaappbr",
            "aws_security_group.alb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_afarmapopular_lb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarmapopular-load-balancer/6c68c9904ad3a949/e41b9e0f9988ae0d",
            "certificate_arn": "arn:aws:acm:us-east-1:768145662839:certificate/afbcf081-53d0-448c-a1d1-424386478c7d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:targetgroup/api-afarmapopular-target-group/fd68903e148b20fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:768145662839:listener/app/api-afarmapopular-load-balancer/6c68c9904ad3a949/e41b9e0f9988ae0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:768145662839:loadbalancer/app/api-afarmapopular-load-balancer/6c68c9904ad3a949",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route53_zone.afarmapopularbr",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "aws_acm_certificate.afarmapopularbrcert",
            "aws_alb.api_afarmapopular_alb",
            "aws_alb_target_group.api_afarmapopular_alb_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079e8af2433692d07",
            "connectivity_type": "public",
            "id": "nat-0f4ea3202700e39b2",
            "network_interface_id": "eni-0c5f99df70743a417",
            "private_ip": "192.168.2.225",
            "public_ip": "18.215.111.29",
            "subnet_id": "subnet-0da08eeed1faff164"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dc8460c5ac0ba0c",
            "connectivity_type": "public",
            "id": "nat-0584740358cf33d5f",
            "network_interface_id": "eni-0641dcfbc4d47c7a9",
            "private_ip": "192.168.3.116",
            "public_ip": "44.197.14.6",
            "subnet_id": "subnet-0d600664c0078c9fc"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-061d20419e8f84f14",
            "id": "r-rtb-0b6d7c82e6632216e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6d7c82e6632216e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:route-table/rtb-0bfae5a8b7794b496",
            "id": "rtb-0bfae5a8b7794b496",
            "owner_id": "768145662839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4ea3202700e39b2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:route-table/rtb-06422405b4e82f980",
            "id": "rtb-06422405b4e82f980",
            "owner_id": "768145662839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0584740358cf33d5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07652f0c5cbf96132",
            "route_table_id": "rtb-0bfae5a8b7794b496",
            "subnet_id": "subnet-07f64c123cd1f9912"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3377f195bb7d88e",
            "route_table_id": "rtb-06422405b4e82f980",
            "subnet_id": "subnet-0f26671487f993242"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available",
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:security-group/sg-043851256becbf8b8",
            "description": "Allow traffic from peering VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043851256becbf8b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "768145662839",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:security-group/sg-063c9a91ba65c7845",
            "description": "Allow Postgres from peering VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063c9a91ba65c7845",
            "ingress": [
              {
                "cidr_blocks": [
                  "168.121.77.226/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pg",
            "name_prefix": "",
            "owner_id": "768145662839",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:security-group/sg-0d7490740966f41ba",
            "description": "Allow Postgres from peering anywhere",
            "egress": [],
            "id": "sg-0d7490740966f41ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pg_pub",
            "name_prefix": "",
            "owner_id": "768145662839",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wildfly",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:security-group/sg-063ab20a69b260313",
            "description": "Allow Postgres from peering VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063ab20a69b260313",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9990,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9990
              },
              {
                "cidr_blocks": [
                  "168.121.77.226/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server",
            "name_prefix": "",
            "owner_id": "768145662839",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:subnet/subnet-07f64c123cd1f9912",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-07f64c123cd1f9912",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768145662839",
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:subnet/subnet-0f26671487f993242",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f26671487f993242",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768145662839",
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:subnet/subnet-0da08eeed1faff164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0da08eeed1faff164",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768145662839",
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:subnet/subnet-0d600664c0078c9fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0d600664c0078c9fc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768145662839",
            "vpc_id": "vpc-09ec941037e03a0b2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:768145662839:vpc/vpc-09ec941037e03a0b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09c11f80f8ccc4b4c",
            "default_route_table_id": "rtb-0b6d7c82e6632216e",
            "default_security_group_id": "sg-0d31910e783d4b034",
            "dhcp_options_id": "dopt-0830f0a08a226fa14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09ec941037e03a0b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b6d7c82e6632216e",
            "owner_id": "768145662839",
            "tags": {
              "Name": "vpc _ prod"
            },
            "tags_all": {
              "Name": "vpc _ prod"
            }
          }
        }
      ]
    }
  ]
}